# done-with-debt

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml  lefthook.yml
api/: .env  Cargo.toml  deny.toml
api/.cargo/: audit.toml
api/migrations/: 001_create_users.sql  002_create_auth_tokens.sql
api/src/: config.rs  db.rs  errors.rs  lib.rs  main.rs
api/src/adapters/inbound/http/: mod.rs  router.rs
api/src/adapters/inbound/http/dto/: auth.rs  bills.rs  budgets.rs  categories.rs  (+5 more)
api/src/adapters/outbound/: mod.rs
api/src/adapters/outbound/postgres/: auth_token_repository.rs  bill_repository.rs  budget_repository.rs  category_repository.rs  debt_repository.rs  institution_repository.rs  mod.rs  notification_settings_repository.rs  subscription_repository.rs  transaction_repository.rs  user_repository.rs  user_settings_repository.rs  wallet_repository.rs
api/src/adapters/outbound/r2/: storage_service.rs
api/src/adapters/outbound/revenuecat/: payment_gateway.rs
api/src/adapters/outbound/stripe/: payment_gateway.rs
api/src/domain/entities/: auth_token.rs  bill.rs  bill_payment.rs  budget.rs  category.rs  credit_card_details.rs  debt.rs  debt_payment.rs  institution.rs  mod.rs  notification_settings.rs  social_account.rs  subscription.rs  transaction.rs  transfer.rs  user.rs  user_settings.rs  wallet.rs
api/src/domain/ports/inbound/: auth_service.rs  bill_service.rs  budget_service.rs  category_service.rs  debt_service.rs  institution_service.rs  mod.rs  notification_settings_service.rs  report_service.rs  subscription_service.rs  transaction_service.rs  user_settings_service.rs  wallet_service.rs
api/src/domain/ports/outbound/: auth_token_repository.rs  bill_repository.rs  budget_repository.rs  category_repository.rs  debt_repository.rs  institution_repository.rs  mod.rs  notification_service.rs  notification_settings_repository.rs  payment_gateway.rs  storage_service.rs  subscription_repository.rs  transaction_repository.rs  user_repository.rs  user_settings_repository.rs  wallet_repository.rs
api/src/domain/services/: auth_service.rs  bill_service.rs  budget_service.rs  category_service.rs  debt_service.rs  institution_service.rs  mod.rs  notification_settings_service.rs  report_service.rs  subscription_service.rs  transaction_service.rs  user_settings_service.rs  wallet_service.rs
api/tests/: integration.rs  unit.rs
api/tests/common/: mod.rs
api/tests/integration/: auth_token_repository_test.rs  user_repository_test.rs
api/tests/unit/: config_test.rs  helpers.rs
api/tests/unit/handlers/: auth_handler_test.rs
api/tests/unit/services/: auth_service_login_test.rs  auth_service_logout_test.rs  auth_service_refresh_test.rs  auth_service_test.rs  bill_service_test.rs  budget_service_test.rs  category_service_test.rs  debt_service_test.rs  mod.rs  subscription_service_test.rs  transaction_service_test.rs  wallet_service_test.rs
(+87 files in other folders)
