[package]
name = "done_with_debt_api"
version = "0.1.0"
edition = "2021"

[lib]
name = "done_with_debt_api"
path = "src/lib.rs"

[[bin]]
name = "done_with_debt_api"
path = "src/main.rs"

[dependencies]
# Runtime
tokio = { version = "1", features = ["full"] }

# HTTP
axum = { version = "0.7", features = ["multipart"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "compression-gzip"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "bigdecimal"] }

# Auth
jsonwebtoken = { version = "10", features = ["use_pem", "rust_crypto"] }
argon2 = "0.5"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Validation
validator = { version = "0.19", features = ["derive"] }

# Dates
chrono = { version = "0.4", features = ["serde"] }

# IDs
uuid = { version = "1", features = ["v4", "serde"] }

# Config
dotenvy = "0.15"

# Async traits
async-trait = "0.1"

# Error handling
thiserror = "1"
anyhow = "1"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# OpenAPI / Swagger
utoipa = { version = "4", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "6", features = ["axum"] }
utoipa-axum = "0.1"

# Decimal
bigdecimal = { version = "0.4", features = ["serde"] }

[dev-dependencies]
testcontainers = "0.15"
testcontainers-modules = { version = "0.3", features = ["postgres"] }
tower = { version = "0.4", features = ["util"] }
